tailscale-proxy/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailscale-proxy
  namespace: tailscale-proxy
spec:
  selector:
    app: tailscale-proxy
  ports:
    - port: 1055
      targetPort: 1055
      protocol: TCP
  type: ClusterIP
